--- a/views/public/html/SANGLOBE-contract.html
+++ b/views/public/html/SANGLOBE-contract.html
@@ -3679,7 +3679,7 @@ u+.body .list_block ol {
     const dob = document.getElementById('dob')
     const rank = document.getElementById('rank')
     
-    fullName.value=response.data.candidate.fname
+    fullName.value=response.data.candidate.fname + ' '+ response.data.candidate.lname
     dob.value=response.data.candidate.dob
     rank.value=response.data.candidate.c_rank
     
