--- a/views/public/html/SCLMERCURY-contract.html
+++ b/views/public/html/SCLMERCURY-contract.html
@@ -5633,7 +5633,7 @@
 			const dob = document.getElementById('dob')
 			const rank = document.getElementById('rank')
 			
-			fullName.value=response.data.candidate.fname
+			fullName.value=response.data.candidate.fname + ' '+ response.data.candidate.lname
 			dob.value=response.data.candidate.dob
 			rank.value=response.data.candidate.c_rank
 			
