--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -501,10 +501,13 @@
 																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Miscellaneous Allowances">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Other Allowances">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Owners Allowances">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
 																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="PF Seafarer">
+																				</td>
+																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="CBA wages onboard">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
 																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="PF Company Contribution">
