--- a/views/public/html/SANMARRAGA-contract.html
+++ b/views/public/html/SANMARRAGA-contract.html
@@ -42,7 +42,7 @@
      <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
-<body >
+<body style="width:1024px; margin: 0 auto;" >
 	<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 	<div style="display: flex;justify-content:space-evenly;align-items: center;">
@@ -177,7 +177,7 @@
 
 
 
-    <table style="width: 50%; max-width: 1000px; margin: 0 auto; border-collapse: collapse; border: 1px solid #000;">
+    <table style="width: 100%; margin: 0 auto; margin-top: 10px; border-collapse: collapse; border: 1px solid #000;">
         <thead>
           <tr>
             <th style=" text-align: center; border: 1px solid #000; background-color: #f2f2f2; font-size: 10px;">Rank on Board</th>
@@ -198,7 +198,7 @@
 
       <h4 style="text-align: center;font-size: 8px;">Remuneration per month (In USD)</h4>
       
-      <table style="width: 50%; max-width: 1000px; margin: 0 auto; border-collapse: collapse; border: 1px solid #000;">
+      <table style="width: 100%; margin: 0 auto; border-collapse: collapse; border: 1px solid #000;">
         <thead>
           <tr>
             <th style=" text-align: center; border: 1px solid #000; background-color: #f2f2f2; font-size: 10px;">Basic Monthly Wage</th>
