add center alignment

--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -430,20 +430,20 @@
 																		<tbody style="vertical-align: top; font-size: 16px; line-height: 120%;">
 																			<tr>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Rank on Board" id="rank">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Rank on Board" id="rank">
 																				</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<select style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" id="placeOfEngagement">
+																					<select style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" id="placeOfEngagement">
 																						<option value="">Select Place of Engagement</option>
 																						<option value="Chennai">Chennai</option>
 																						<option value="Mumbai">Mumbai</option>
 																					</select>
 																																								</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Duration of Contract">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Duration of Contract">
 																				</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Wage starts from">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Wage starts from">
 																				</td>
 																			</tr>
 																		</tbody>
