--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -116,7 +116,7 @@
 	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
 
-	<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+	<body class="body" style="width: 1024px; margin: 0 auto; background-color: #ffffff; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
 		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 		
@@ -672,7 +672,7 @@
 							</tbody>
 						</table>		
 
-						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
+						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.png"  style="width:100%; height:90px"></div>				
 						<div class="page-break" ></div>
 <div style="margin-left: 30px;margin-right: 30px;">
 					<table class="row row-12" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
