--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -135,7 +135,7 @@
 														<table class="html_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 															<tr>
 																<td class="pad">
-																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:start;" align="center">    <div><p style="padding: 5px;"><span style="border: black 1px solid;padding: 5px;">NEMO ID :<span id="candidateId"></span></span></p></div></div>
+																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:start;" align="center">    <div><p style="padding: 0;"><span style="border: black 1px solid;padding: 5px;">NEMO ID :<span id="candidateId"></span></span></p></div></div>
 																</td>
 															</tr>
 														</table>
@@ -153,7 +153,7 @@
 														<table class="html_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 															<tr>
 																<td class="pad">
-																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:end;" align="center">    <div><p style="padding: 5px;"><span style="border: black 1px solid;padding: 5px;">RPSL/CHN/012</span></p></div></div>
+																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:end;" align="center">    <div><p style="padding: 0;"><span style="border: black 1px solid;padding: 5px;">RPSL/CHN/012</span></p></div></div>
 	</div>
 																</td>
 															</tr>
@@ -334,7 +334,7 @@
 														</table>
 														<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 															<tr>
-																<td class="pad">
+																<td class="pad" style=" padding: 0;">
 																	<div style="color:#101112; direction:ltr; font-family:Arial, Helvetica, sans-serif; font-size:12px; font-weight:400; letter-spacing:0px; line-height:0%; text-align:left; ">
 																		<p style="margin: 0;">
 																			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Vessel Type: 
@@ -390,7 +390,7 @@
 											<tbody>
 												<tr>
 													<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-														<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<table class="paragraph_block block-1" width="100%" border="0" cellpadding="" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 															<tr>
 																<td class="pad">
 																	<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:10px;font-weight:400;letter-spacing:0px;text-align:left;">
