--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -116,11 +116,11 @@
 	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
 
-	<body class="body" style="width: 1024px; margin: 0 auto; background-color: #ffffff; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
+	<body class="body" style="background-color: #ffffff; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="./letter-pad-top.jpg"  style="width:100%; height:90px"></div>
 
 		
-		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
+		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff; width: 1024px; margin: 0 auto;">
 			<tbody>
 				<tr>
 					<td>
